--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -11,6 +11,14 @@ nav{
     padding: 10px 0;
     z-index: 12;
 }
+nav .menu{
+    max-width: 1250px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
 .menu .logo a{
     text-decoration: none;
     color: orangered;
