--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -105,3 +105,50 @@ nav .menu{
     background: white;
     color: black;
 }
+.top{
+    position: absolute;
+    top: 52%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    padding: 0 20px;
+    text-align: left;
+}
+.top .title{
+    color: white;
+    font-size: 55px;
+    font-weight: 600;
+    padding-bottom: 500px;
+}
+h2{
+    color: aqua;
+}
+h2{
+    color: aqua;
+}
+.cent{
+    color: white;
+    position: absolute;
+    top: 52%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    padding: 0 20px;
+    text-align: center;
+    font-size: 20px;
+}
+.cent .sub_heady{
+    color: white;
+    font-size: 25px;
+    font-weight: 500;
+}
+body{
+    background: url(../Images/2.JPG) no-repeat;
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    position:relative;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
