--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -123,9 +123,6 @@ nav .menu{
 h2{
     color: aqua;
 }
-h2{
-    color: aqua;
-}
 .cent{
     color: white;
     position: absolute;
@@ -143,7 +140,7 @@ h2{
     font-weight: 500;
 }
 body{
-    background: url(../Images/2.JPG) no-repeat;
+    background: url(../image/1.jpg) no-repeat;
     height: 100vh;
     width: 100%;
     background-position: center;
@@ -151,4 +148,67 @@ body{
     position:relative;
     font-size: 14px;
     font-family: 'Poppins', sans-serif;
+}
+.container{
+    width: 80%;
+    margin: 50px auto;
+}
+.content-box{
+    background: rgb(214, 210, 210);
+    display: flex;
+}
+.contact-left{
+    flex-basis: 60%;
+    padding: 40px 60px;
+}
+.contact-right{
+    flex-basis: 40%;
+    padding: 40px;
+    background: #151127;
+    color: white;
+}
+h1{
+    color: white;
+    margin-bottom: 60px;
+}
+.container p{
+    margin-bottom: 50px;
+}
+.input-row{
+     display: flex;
+     justify-content: space-between;
+     margin-bottom: 20px;
+}
+.input-row .input-group{
+    flex-basis: 45%;
+}
+input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    outline: none;
+    padding-bottom: 5px;
+}  
+textarea{
+    width: 100%;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+label{
+    margin-bottom: 6px;
+    display: block;
+    color: #120941;
+}
+button{
+    background: #2d1b91;
+    width: 100px;
+    border: none;
+    outline: none;
+    color: #fff;
+    height: 35px;
+    border-radius: 30px;
+    margin-top: 20px;
+    box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.3);
 }
