--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -150,11 +150,11 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    width: 80%;
-    margin: 50px auto;
+    width: 90%;
+    margin: 60px auto;
 }
 .content-box{
-    background: rgb(214, 210, 210);
+    background: rgb(211, 207, 207);
     display: flex;
 }
 .contact-left{
@@ -164,20 +164,20 @@ body{
 .contact-right{
     flex-basis: 40%;
     padding: 40px;
-    background: #151127;
+    background: rgb(153, 53, 25);
     color: white;
 }
-.h1{
-    color: white;
-    margin-bottom: 50px;
+.p h1{
+    color: rgb(170, 148, 140);
+    margin-bottom: 80px;
 }
 .container p{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .input-row{
      display: flex;
      justify-content: space-between;
-     margin-bottom: 20px;
+     margin-bottom: 25px;
 }
 .input-row .input-group{
     flex-basis: 45%;
@@ -195,14 +195,15 @@ textarea{
     outline: none;
     padding: 10px;
     box-sizing: border-box;
+    border-radius: 7px;
 }
 label{
     margin-bottom: 6px;
     display: block;
-    color: #120941;
+    color: #423b68;
 }
 button{
-    background: #2d1b91;
+    background: orangered;
     width: 100px;
     border: none;
     outline: none;
@@ -231,7 +232,7 @@ tr td{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 150px 20px 20px 20px;
+    padding: 180px 30px 30px 30px;
 }
 .social-icon{
     margin: 40px 10px 0px;
@@ -271,3 +272,58 @@ tr td{
     border-radius: 50%;
     transition: 0ms;
 }
+.social-icon:hover, 
+.social-icon:focus{
+    columns: #ffffff;
+}
+.social-icon:hover::after, 
+.social-icon:focus::after{
+    width: 100%;
+    height: 100%;
+    margin-left: -50%;
+}
+.twitter{
+    color: #00acee;
+}
+.twitter::after{
+    background: #00acee;
+}
+.linkedin{
+    color: #0E76a8;
+}
+.linkedin::after{
+    background: #0e76a8;
+}
+.github{
+    color: #6e5494;
+}
+.github::after{
+    background: #6e5494;
+}
+.instagram{
+    color: #3f729b;
+}
+.instagram::after{
+    background: #3f729b;
+}
+.facebook{
+    color: #3b5998;
+}
+.facebook::after{
+    background: #3b5998;
+}
+.whatsapp{
+    color: #34B7F1;
+}
+
+.whatsapp::after{
+    background: #34B7F1;
+}
+.gmail{
+    color: #4285F4;
+}
+
+.gmail::after{
+    background: #4285F4;
+}
+
