--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -140,18 +140,18 @@ h2{
     font-weight: 500;
 }
 body{
-    background: url(../Images/1.jpg) no-repeat;
+    background: url(../Images/5.jpeg) no-repeat;
     height: 100vh;
     width: 100%;
     background-position: center;
     background-size: cover;
-    position:relative;
-    font-size: 14px;
+    position: relative;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    width: 90%;
-    margin: 60px auto;
+    width: 80%;
+    margin: 50px auto;
 }
 .content-box{
     background: rgb(211, 207, 207);
@@ -163,13 +163,9 @@ body{
 }
 .contact-right{
     flex-basis: 40%;
-    padding: 40px;
+    padding: 30px;
     background: rgb(153, 53, 25);
     color: white;
-}
-.p h1{
-    color: rgb(170, 148, 140);
-    margin-bottom: 80px;
 }
 .container p{
     margin-bottom: 50px;
@@ -177,7 +173,7 @@ body{
 .input-row{
      display: flex;
      justify-content: space-between;
-     margin-bottom: 25px;
+     margin-bottom: 20px;
 }
 .input-row .input-group{
     flex-basis: 45%;
@@ -220,29 +216,29 @@ button{
 }
 .contact-right h3{
     font-weight: 600;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 tr td:first-child{
-    padding-right: 20px;
+    padding-right: 30px;
 }
 tr td{
-    padding-top: 20px;
+    padding-top: 30px;
 }
 .social-icons{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 180px 30px 30px 30px;
+    padding: 100px 20px 20px 20px;
 }
 .social-icon{
-    margin: 40px 10px 0px;
+    margin: 45px 30px 10px 10px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     outline: none;
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
     text-decoration: none;
 }
 .icon_inner{
