--- a/CSS.Style/style.css
+++ b/CSS.Style/style.css
@@ -150,8 +150,8 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    width: 80%;
-    margin: 50px auto;
+    width: 85%;
+    margin: 70px auto;
 }
 .content-box{
     background: rgb(211, 207, 207);
@@ -210,7 +210,7 @@ button{
     box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.3);
 }
 .contact-left h3{
-    color: #1c00b5;
+    color: orangered;
     font-weight: 600;
     margin-bottom: 30px;
 }
@@ -228,10 +228,10 @@ tr td{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 100px 20px 20px 20px;
+    padding: 150px 20px 20px 20px;
 }
 .social-icon{
-    margin: 45px 30px 10px 10px;
+    margin: 30px 10px 10px 10px;
     position: relative;
     display: flex;
     justify-content: center;
